k8s/mongo-primary-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service-primary
  namespace: poll
spec:
  clusterIP: None
  selector:
    role: mongo-primary
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: poll-statefulset-primary
  namespace: poll
spec:
  selector:
    matchLabels:
      role: mongo-primary
  serviceName: mongo-service-primary
  replicas: 1
  template:
    metadata:
      namespace: poll
      name: mongo
      labels:
        role: mongo-primary
    spec:
      containers:
      - name: mongo
        image: mongo
        command: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "poll_rs","--port" ,"27017"]
        ports:
          - containerPort: 27017
            hostPort: 27017
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-x", "/rs-scripts/rs-init.sh"]  
        volumeMounts:
        - name: mongo-volume
          mountPath: /data/db
        - name: temp-mongo-config-init
          mountPath: /tmp/rs-scripts/init.js
          subPath: init.js
          readOnly: false
        - name: temp-mongo-config-rs-init
          mountPath: /tmp/rs-scripts/rs-init.sh
          subPath: rs-init.sh
          readOnly: false
        - name: mongo-config
          mountPath: /rs-scripts
      restartPolicy: Always
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: poll-pvc
        - name: temp-mongo-config-init
          configMap:
            name: mongo-replica-config-init
        - name: temp-mongo-config-rs-init
          configMap:
            name: mongo-replica-config-rs-init
        - name: mongo-config
          emptyDir: {}
