k8s/mongo-primary.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service-primary
  namespace: poll
spec:
  clusterIP: None
  selector:
    role: mongo-primary
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: poll-statefulset-primary
  namespace: poll
spec:
  selector:
    matchLabels:
      role: mongo-primary
  serviceName: mongo-service-primary
  replicas: 1
  template:
    metadata:
      namespace: poll
      name: mongo
      labels:
        role: mongo-primary
    spec:
      restartPolicy: Always
      containers:
      - name: mongo
        image: mongo
        command: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "poll_rs" ]
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-volume
          mountPath: /data/db
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: poll-pvc
