k8s/mongo-secondary-statefullset.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service-secondary
  namespace: poll
spec:
  type: LoadBalancer
  selector:
    role: mongo-secondary
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: poll-statefulset-secondary
  namespace: poll
spec:
  selector:
    matchLabels:
      role: mongo-secondary
  serviceName: mongo-service-secondary
  replicas: 2
  template:
    metadata:
      namespace: poll
      name: mongo
      labels:
        role: mongo-secondary
    spec:
      containers:
      - name: mongo
        image: mongo
        command: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "poll_rs","--port" ,"27017"]
        ports:
          - containerPort: 27017
            hostPort: 27017
        volumeMounts:
        - name: mongo-volume-secondary
          mountPath: /data/db
      restartPolicy: Always
      volumes:
        - name: mongo-volume-secondary
          persistentVolumeClaim:
            claimName: poll-pvc
