k8s/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: poll-statefulset
  namespace: poll
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
          name: mongoPort
        volumeMounts:
        - name: mongo-volume
          mountPath: /data/db
    volumes:
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: poll-pvc
