k8s/poll-voting-result-service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: poll-voting-result-service
  namespace: poll
spec:
  type: ClusterIP
  selector:
    app: poll-voting-result-service
  ports:
  - port: 5001
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-voting-result-service
  namespace: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-voting-result-service
  template:
    metadata:
      namespace: poll
      labels:
        app: poll-voting-result-service
    spec:
      containers:
      - name: poll-voting-result-service
        image: suraj49470/poll-voting-result-service:v3
        resources:
          limits:
            memory: "250Mi"
            cpu: "750m"
        ports:
        - containerPort: 80
      # volumes:
      #   - name: poll-pod-volume
      #     PersistentVolumeClaim:
      #       claimName: poll-pvc
