k8s/poll-voting-result-ui-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: poll-voting-result-ui-service
  namespace: poll
spec:
  type: ClusterIP
  selector:
    app: poll-voting-result-ui
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-voting-result-ui
  namespace: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll-voting-result-ui
  template:
    metadata:
      namespace: poll
      labels:
        app: poll-voting-result-ui
    spec:
      containers:
      - name: poll-voting-result-ui
        image: suraj49470/poll-voting-result-ui:socket
        volumeMounts:
          - name: ngnix-volume-cfg
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
            readOnly: false
          - name: transform-volume-cfg
            mountPath: /config-scripts/transform.sh
            subPath: transform.sh
            readOnly: false
          - name: transform-scripts
            mountPath: /scripts
            readOnly: false
        resources:
          limits:
            memory: "50Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-x", "/scripts/transform.sh"]
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
        - name: ngnix-volume-cfg
          configMap:
            name: nginx-config
        - name: transform-volume-cfg
          configMap:
            name: transform-config
        - name: transform-scripts
          emptyDir : {}
