k8s/poll-voting-service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: poll-voting-service
  namespace: poll
spec:
  type: ClusterIP
  selector:
    app: poll-voting-service
  ports:
  - port: 5000
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-voting-service
  namespace: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll-voting-service
  template:
    metadata:
      namespace: poll
      labels:
        app: poll-voting-service
    spec:
      containers:
      - name: poll-voting-service
        image: suraj49470/poll-voting-service:v3
        resources:
          limits:
            memory: "250Mi"
            cpu: "750m"
        ports:
          - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

      # volumes:
      #   - name: poll-pod-volume
      #     PersistentVolumeClaim:
      #       claimName: poll-pvc
