k8s/poll-voting-ui-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: poll-voting-ui-service
  namespace: poll
spec:
  type: NodePort
  selector:
    app: poll-voting-ui
  ports:
  - protocol: TCP
    port: 3000
    nodePort: 30000
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-voting-ui
  namespace: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-voting-ui
  template:
    metadata:
      namespace: poll
      labels:
        app: poll-voting-ui
    spec:
      containers:
      - name: poll-voting-ui
        image: suraj49470/poll-voting-ui:latest
        volumeMounts:
          - name: ngnix-volume-cfg
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
            readOnly: false
          - name: transform-volume-cfg
            mountPath: /scripts/transform.sh
            subPath: transform.sh
            readOnly: false
        env :
          - name:  REACT_APP_BACKEND_URL
            value: http://poll-voting-service:5000 
          - name:  REACT_APP_POLL_RESULT_URL
            value: http://poll-voting-result-ui-service:3001 
        resources:
          limits:
            memory: "50Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
      volumes:
        - name: ngnix-volume-cfg
          configMap:
            name: nginx-config
        - name: transform-volume-cfg
          configMap:
            name: transform-config
