k8s/poll-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  namespace: poll
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/websocket-services: "poll-voting-service,poll-voting-result-service"
    nginx.org/websocket-services: "poll-voting-service,poll-voting-result-service"
spec:
  rules:
    - host: poll-app.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: poll-voting-ui-service
              port: 
                number: 3000
    - host: poll-app-service.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: poll-voting-service
              port: 
                number: 5000
    - host: poll-result-app.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: poll-voting-result-ui-service
              port: 
                number: 3001
    - host: poll-result-app-service.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: poll-voting-result-service
              port: 
                number: 5001
